--- a/src/styles/Quran.css
+++ b/src/styles/Quran.css
@@ -5,8 +5,6 @@
 
 .swiper-slide {
     text-align: center;
-    font-size: 18px;
-    background: #fff;
 
     /* Center slide text vertically */
     display: flex;
@@ -16,7 +14,7 @@
 
 .swiper-slide img {
     display: block;
-    width: 50%;
-    height: 100%;
-    object-fit: cover;
+    width: 90%;
+    height: 600px;
+    object-fit: contain;
 }
